added basic authentication

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,10 +25,15 @@
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
             <div class="sb-sidenav-menu">
                 <div class="nav">
-                    <div class="sb-sidenav-menu-heading">API Controls</div>
+                    <div class="sb-sidenav-menu-heading">Info</div>
                     <a class="nav-link" href="/status">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Server Status
+                    </a>
+                    <div class="sb-sidenav-menu-heading">Admin</div>
+                    <a class="nav-link" href="/adminStatus">
+                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                        Admin Server Status
                     </a>
                     <a class="nav-link" href="/config">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
