added simple view

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,10 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Info</div>
+                    <a class="nav-link" href="/statusSimple">
+                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                        Match Status
+                    </a>
                     <a class="nav-link" href="/status">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Server Status
