--- a/app/templates/config.html
+++ b/app/templates/config.html
@@ -105,7 +105,7 @@
     <script>
         function startTeamMatch() {
             let xmlHttp = new XMLHttpRequest();
-            xmlHttp.open("POST", "http://127.0.0.1:5000/config/startTeamMatch", true);
+            xmlHttp.open("POST", "http://{{ server_ip }}/config/startTeamMatch", true);
 
             xmlHttp.setRequestHeader("Content-Type", "application/json");
             xmlHttp.send(JSON.stringify({
@@ -119,7 +119,7 @@
 
         function startPlayerMatch() {
             let xmlHttp = new XMLHttpRequest();
-            xmlHttp.open("POST", "http://127.0.0.1:5000/config/startPlayerMatch", true);
+            xmlHttp.open("POST", "http://{{ server_ip }}/config/startPlayerMatch", true);
 
             xmlHttp.setRequestHeader("Content-Type", "application/json");
             xmlHttp.send(JSON.stringify({
