more work one database manager and new data layout error pages are now also working with fastapi changed readme to include new instructions and banned players

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <meta this_name="this_description" content=""/>
     <meta this_name="author" content=""/>
     <title>CSGO - Controls</title>
-    <link href="/css/styles.css" rel="stylesheet"/>
+    <link href="/static/css/styles.css" rel="stylesheet"/>
     <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
           crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
@@ -26,22 +26,14 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Info</div>
-                    <a class="nav-link" href="/statusSimple">
+                    <a class="nav-link" href="/status">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Match Status
                     </a>
-                    <a class="nav-link" href="/status">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                        Server Status
-                    </a>
                     <div class="sb-sidenav-menu-heading">Admin</div>
-                    <a class="nav-link" href="/adminStatus">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                        Admin Server Status
-                    </a>
-                    <a class="nav-link" href="/config">
+                    <a class="nav-link" href="/manageMatches">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                        Config Servers
+                        Manage Matches
                     </a>
                 </div>
             </div>
@@ -58,7 +50,7 @@
             <div class="container-fluid">
                 <div class="d-flex align-items-center justify-content-between small">
                     <div class="text-muted">Copyright &copy; Verein zur Förderung von Wissenschaft und Technik an
-                        Schulen (F-WuTS) 2010-2021
+                        Schulen (F-WuTS) 2010-2022
                     </div>
                     <div>
                         <a href="https://robo4you.at/datenschutz">Privacy Policy</a>
