--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>404 Error</title>
-    <link href="/css/styles.css" rel="stylesheet"/>
+    <link href="/static/css/styles.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
 </head>
@@ -19,7 +19,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <div class="text-center mt-4">
-                            <img class="mb-4 img-error" src="/assets/img/error-404-monochrome.svg"/>
+                            <img class="mb-4 img-error" src="/static/assets/img/error-404-monochrome.svg"/>
                             <p class="lead">This requested URL was not found on this server.</p>
                             <a href="/">
                                 <i class="fas fa-arrow-left mr-1"></i>
@@ -36,7 +36,7 @@
             <div class="container-fluid">
                 <div class="d-flex align-items-center justify-content-between small">
                     <div class="text-muted">Copyright &copy; Verein zur Förderung von Wissenschaft und Technik an
-                        Schulen (F-WuTS) 2010-2021
+                        Schulen (F-WuTS) 2010-2022
                     </div>
                     <div>
                         <a href="https://robo4you.at/datenschutz">Privacy Policy</a>
@@ -51,6 +51,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-<script src="/js/scripts.js"></script>
+<script src="/static/js/scripts.js"></script>
 </body>
 </html>
