--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -7,7 +7,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>500 Error</title>
-    <link href="/css/styles.css" rel="stylesheet"/>
+    <link href="/static/css/styles.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
 </head>
@@ -36,7 +36,7 @@
             <div class="container-fluid">
                 <div class="d-flex align-items-center justify-content-between small">
                     <div class="text-muted">Copyright &copy; Verein zur Förderung von Wissenschaft und Technik an
-                        Schulen (F-WuTS) 2010-2021
+                        Schulen (F-WuTS) 2010-2022
                     </div>
                     <div>
                         <a href="https://robo4you.at/datenschutz">Privacy Policy</a>
@@ -52,6 +52,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-<script src="/js/scripts.js"></script>
+<script src="/static/js/scripts.js"></script>
 </body>
 </html>
