--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -113,7 +113,7 @@
     <script onload="getInfo();">
         function getInfo() {
             let xmlHttp = new XMLHttpRequest();
-            xmlHttp.open("GET", "http://127.0.0.1:5000/status/info", false);
+            xmlHttp.open("GET", "/api/info", false);
             xmlHttp.send(null);
 
             let res = JSON.parse(xmlHttp.responseText);
@@ -165,17 +165,6 @@
                 {% endif %}
             {% endfor %}
         }
-        {% if admin %}
-        function endMatch(id) {
-            let xmlHttp = new XMLHttpRequest();
-            xmlHttp.open("POST", "/api/endMatch", true);
-
-            xmlHttp.setRequestHeader("Content-Type", "application/json");
-            xmlHttp.send(JSON.stringify({
-                "server": id
-            }));
-        }
-        {% endif %}
 
         setInterval(getInfo, 1000);
     </script>
